# next_boat_ingestor

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: config.rs  main.rs  models.rs  utils.rs
