[package]
name = "next_boat_ingestor"
version = "0.1.0"
authors = ["Jon Edwards <jkedwards@me.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features=["rustls"] }
deadpool-redis = { version = "0.6", features = ["config"] }
config-crate = { package = "config", version = "0.10.1"}
dotenv = "*"
serde = "*"
thiserror = "*"
chrono = "0.4"
rustls = "0.17.0"
regex = "1"
lazy_static = "1.4.0"
